--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
                 <div class="header-left">
                     <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png"></logo>
                 </div>
+
+                <div class="header-right">
+                    <a class="login" href="#">ログイン</a>
+                </div>
             </div>
         </header>
         <div class="top-wrapper">
