--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <div class="lesson">
                         <div class="lesson-icon">
                             <img src="https://prog-8.com/images/html/advanced/html.png">
-                            <p></p>
+                            <p>HTML & CSS</p>
                         </div>
 
                         <p class="txt-contents"></p>
@@ -62,7 +62,7 @@
                     <div class="lesson">
                         <div class="lesson-icon">
                             <img src="https://prog-8.com/images/html/advanced/jQuery.png">
-                            <p></p>
+                            <p>jQuery</p>
                         </div>
 
                         <p class="txt-contents"></p>
@@ -73,7 +73,7 @@
                     <div class="lesson">
                         <div class="lesson-icon">
                             <img src="https://prog-8.com/images/html/advanced/ruby.png">
-                            <p></p>
+                            <p>Ruby</p>
                         </div>
 
                         <p class="txt-contents"></p>
@@ -84,7 +84,7 @@
                     <div class="lesson">
                         <div class="lesson-icon">
                             <img src="https://prog-8.com/images/html/advanced/php.png">
-                            <p></p>
+                            <p>PHP</p>
                         </div>
 
                         <p class="txt-contents"></p>
