--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             <p>HTML & CSS</p>
                         </div>
 
-                        <p class="txt-contents"></p>
+                        <p class="txt-contents">Webページの作成に使用される言語です。HTMLとCSSを組み合わせることで、静的なページを作り上げることができます。</p>
                     </div>
                 </div>
 
@@ -65,7 +65,7 @@
                             <p>jQuery</p>
                         </div>
 
-                        <p class="txt-contents"></p>
+                        <p class="txt-contents">素敵な動きを手軽に実装できるJavaScriptライブラリです。 アニメーション効果をつけたり、Ajax（エイジャックス）を使って外部ファイルを読み込んだりと色々なことができます。</p>
                     </div>
                 </div>
 
@@ -76,7 +76,7 @@
                             <p>Ruby</p>
                         </div>
 
-                        <p class="txt-contents"></p>
+                        <p class="txt-contents">オープンソースの動的なプログラミング言語で、 シンプルさと高い生産性を備えています。大きなWebアプリケーションから小さな日用ツールまで、さまざまなソフトウェアを作ることができます。</p>
                     </div>
                 </div>
 
@@ -87,7 +87,7 @@
                             <p>PHP</p>
                         </div>
 
-                        <p class="txt-contents"></p>
+                        <p class="txt-contents">HTMLだけではページの内容を変えることはできません。PHPはHTMLにプログラムを埋め込み、それを可能にします。</p>
                     </div>
                 </div>
 
