--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE thml>
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Progare</title>
+        <title>Progate</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     </head>
@@ -11,7 +11,7 @@
         <header>
             <div class="container">
                 <div class="header-left">
-                    <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png"></logo>
+                    <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
                 </div>
 
                 <div class="header-right">
@@ -53,47 +53,36 @@
                             <img src="https://prog-8.com/images/html/advanced/html.png">
                             <p>HTML & CSS</p>
                         </div>
-
                         <p class="txt-contents">Webページの作成に使用される言語です。HTMLとCSSを組み合わせることで、静的なページを作り上げることができます。</p>
                     </div>
-                </div>
 
-                <div class="lessons">
                     <div class="lesson">
                         <div class="lesson-icon">
                             <img src="https://prog-8.com/images/html/advanced/jQuery.png">
                             <p>jQuery</p>
                         </div>
-
                         <p class="txt-contents">素敵な動きを手軽に実装できるJavaScriptライブラリです。 アニメーション効果をつけたり、Ajax（エイジャックス）を使って外部ファイルを読み込んだりと色々なことができます。</p>
                     </div>
-                </div>
 
-                <div class="lessons">
                     <div class="lesson">
                         <div class="lesson-icon">
                             <img src="https://prog-8.com/images/html/advanced/ruby.png">
                             <p>Ruby</p>
                         </div>
-
                         <p class="txt-contents">オープンソースの動的なプログラミング言語で、 シンプルさと高い生産性を備えています。大きなWebアプリケーションから小さな日用ツールまで、さまざまなソフトウェアを作ることができます。</p>
                     </div>
-                </div>
 
-                <div class="lessons">
                     <div class="lesson">
                         <div class="lesson-icon">
                             <img src="https://prog-8.com/images/html/advanced/php.png">
                             <p>PHP</p>
                         </div>
-
                         <p class="txt-contents">HTMLだけではページの内容を変えることはできません。PHPはHTMLにプログラムを埋め込み、それを可能にします。</p>
                     </div>
                 </div>
-
             </div>
         </div>
-        <div class="massage-wrapper"></div>
+        <div class="message-wrapper"></div>
 
         <footer></footer>
         
