--- a/index.html
+++ b/index.html
@@ -82,7 +82,15 @@
                 </div>
             </div>
         </div>
-        <div class="message-wrapper"></div>
+        <div class="message-wrapper">
+            <div class="container">
+                <div class="heading">
+                    <h2>さぁ、あなたもProgateでプログラミングを学んでみませんか?</h2>
+                    <h3>Let's learn to code, learn to be creative!</h3>
+                </div>
+                <a class="btn message" href="#">さっそく開発する</a>
+            </div>
+        </div>
 
         <footer></footer>
         
