--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <h2>さぁ、あなたもProgateでプログラミングを学んでみませんか?</h2>
                     <h3>Let's learn to code, learn to be creative!</h3>
                 </div>
-                <a class="btn message" href="#">さっそく開発する</a>
+                <a href="#" class="btn message">さっそく開発する</a>
             </div>
         </div>
 
